<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_Menu_Search">Поиск</string>
    <string name="main_Menu_Library">Медиатека</string>
    <string name="main_Menu_Settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_the_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_share">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения "Playlist Maker"</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_adress">akutsyk@yandex.ru</string>
    <string name="link_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_no_search">Ничего не нашлось</string>
    <string name="error_no_signal">Проблемы со связью\n \nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">История поиска</string>
    <string name="clean_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="Album">Альбом</string>
    <string name="Year">Год</string>
    <string name="Genre">Жанр</string>
    <string name="Country">Страна</string>
    <string name="time_track_mm_ss">mm:ss</string>
    <string name="year_track_yyyy">yyyy</string>
    <string name="no_demo">No Demo</string>
    <string name="empty_mediateca">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title_hint">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="complete_making_playlist">Завершить создание плейлиста?</string>
    <string name="data_will_lose">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="track">трек</string>
    <string name="tracka">трека</string>
    <string name="trackov">треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_add_to_the_playlist">"Трек уже добавлен в плейлист "</string>
    <string name="add_to_the_playlist">"Добавлено в плейлист "</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="minut">минут</string>
    <string name="minuta">минута</string>
    <string name="minuti">минуты</string>
    <string name="mm_minutes">mm</string>
    <string name="ss_second">ss</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure_you_want_to_delete_the_track_from_playlist">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="delete">Удалить</string>
    <string name="playlist_does_not_have_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="mailto">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_wont_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="edit_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="null_title">null</string>
    <string name="there_are_no_tracks_in_this_playlist">В этом плейлисте нет треков</string>
</resources>