<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingStart="@dimen/gap_16dp"
    android:paddingEnd="@dimen/side_gap_right"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_52dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/colorSecondary"
            app:srcCompat="@drawable/arrow_back"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/gap_24dp"
            android:text="@string/main_Menu_Settings"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/title_size"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_line_height"
        android:layout_marginTop="@dimen/gap_24dp"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_size_16"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        style="@style/SwitchStyle"
        />

    <LinearLayout style="@style/LinearSettingStyle">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/share_app" />

        <ImageButton
            android:id="@+id/button_share"
            style="@style/ImageButtonStyle"
            app:srcCompat="@drawable/share" />

    </LinearLayout>

    <LinearLayout
        style="@style/LinearSettingStyle">

        <TextView
            android:text="@string/write_to_the_support"
            style="@style/TextViewStyle" />

        <ImageButton
            android:id="@+id/button_support"
            app:srcCompat="@drawable/support"
            style="@style/ImageButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearSettingStyle">

        <TextView
            android:text="@string/user_agreement"
            style="@style/TextViewStyle" />

        <ImageButton
            android:id="@+id/button_user_agreement"
            app:srcCompat="@drawable/arrow_forward"
            style="@style/ImageButtonStyle"
        />

    </LinearLayout>

</LinearLayout>