<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azure"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/side_gap_left">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/main_Menu_Search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_22"
        app:cornerRadius="@dimen/radius_button"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/main_Menu_Library"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_22"
        app:cornerRadius="@dimen/radius_button"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/main_Menu_Settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_22"
        android:textStyle="normal"
        app:cornerRadius="@dimen/radius_button"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

</LinearLayout>