<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:windowSoftInputMode="adjustResize"
    tools:context=".library.playlist.ui.PlaylistCreatorFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottomBoarder"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_32dp"/>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/gap_4dp"
        android:layout_marginTop="@dimen/gap_4dp"
        android:background="@null"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/new_playlist_text_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gap_52dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_12dp"
        android:text="@string/new_playlist"
        android:textColor="?attr/colorOnBackground"
        android:textFontWeight="500"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <ImageView
        android:id="@+id/coverPlaylist"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginHorizontal="@dimen/gap_24dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/add_cover_playlist_background"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:maxLines="1"
        android:ellipsize="end"
        android:padding="@dimen/gap_16dp"
        android:textColorHint="?attr/colorOnBackground"
        android:textCursorDrawable="@drawable/cursor"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/coverPlaylist" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/description"
        android:inputType="text"
        android:maxLines="1"
        android:ellipsize="end"
        android:padding="@dimen/gap_16dp"
        android:textColorHint="?attr/colorOnBackground"
        android:textCursorDrawable="@drawable/cursor"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

    <TextView
        android:id="@+id/create_button"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/create_button_background"
        android:clickable="true"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:padding="@dimen/gap_16dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintBottom_toBottomOf="@id/bottomBoarder"/>

    <TextView
        android:id="@+id/hint_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_8dp"
        android:background="?attr/colorSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="8dp"
        android:text="@string/title_hint"
        android:textColor="@color/azure"
        android:textFontWeight="400"
        android:textSize="@dimen/_12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/name_edit_text"
        app:layout_constraintStart_toStartOf="@id/name_edit_text"
        app:layout_constraintTop_toTopOf="@id/name_edit_text"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/hint_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_8dp"
        android:background="?attr/colorSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="8dp"
        android:text="@string/description"
        android:textColor="@color/azure"
        android:textFontWeight="400"
        android:textSize="@dimen/_12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/description_edit_text"
        app:layout_constraintStart_toStartOf="@id/description_edit_text"
        app:layout_constraintTop_toTopOf="@id/description_edit_text"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>