<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gap_52dp"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/main_Menu_Search"
        android:textColor="?attr/colorOnBackground"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_22"
        android:layout_marginHorizontal="@dimen/gap_16dp"
        android:gravity="center_vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36dp"
        android:layout_marginHorizontal="@dimen/gap_16dp"
        android:layout_marginVertical="@dimen/gap_8dp"
        android:background="@drawable/edit_text"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_12dp"
            app:srcCompat="@drawable/icon_search"
            app:tint="?attr/colorOnContainer" />

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/_36dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/main_Menu_Search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/gap_8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorOnContainer"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_gap"
            android:visibility="gone"
            app:srcCompat="@drawable/baseline_clear_24"
            app:tint="@color/black"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_44dp"
                    android:layout_height="@dimen/_44dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/azure"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_12dp"
            android:layout_marginVertical="@dimen/gap_16dp" />

        <LinearLayout
            android:id="@+id/placeholderErrorSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <FrameLayout
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_120dp"
                android:layout_marginTop="102dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="9dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/union_bottom"
                    app:tint="?attr/colorOnBackground" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/smile_sadness" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/union_top"
                    app:tint="?attr/colorOnBackground" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/error_no_search"
                android:textColor="?attr/colorOnBackground"
                android:textFontWeight="400"
                android:textSize="@dimen/_19sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholder_error_connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <FrameLayout
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_120dp"
                android:layout_marginTop="102dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="9dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/union_bottom"
                    app:tint="?attr/colorOnBackground" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_no_signal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/union_top"
                    app:tint="?attr/colorOnBackground" />

            </FrameLayout>

            <TextView
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_horizontal"
                android:text="@string/error_no_signal"
                android:textColor="?attr/colorOnBackground"
                android:textFontWeight="400"
                android:textSize="@dimen/_19sp" />

            <Button
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_34dp"
                android:backgroundTint="?attr/colorOnBackground"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:insetTop="@dimen/gap_0dp"
                android:insetBottom="@dimen/gap_0dp"
                android:text="@string/refresh"
                android:textColor="?attr/colorSecondary"
                android:textFontWeight="500"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_42dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/search_history"
                    android:textColor="?attr/colorOnBackground"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_19sp"
                    android:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/track_history_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/_12dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_clean_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/gap_24dp"
                    android:backgroundTint="?attr/colorOnBackground"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center"
                    android:insetTop="@dimen/gap_0dp"
                    android:insetBottom="@dimen/gap_0dp"
                    android:text="@string/clean_history"
                    android:textColor="?attr/colorSecondary"
                    android:textFontWeight="500"
                    android:textSize="@dimen/_14sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>